--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Dog CEO</h1>
 
-    <div id="dog-image-container">
+    <id id="dog-image-container">
       <!-- images here -->
     </div>
 
@@ -22,7 +22,6 @@
     </select>
 
     <ul id="dog-breeds">
-
     </ul>
 
   </body>
